--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,6 +4,6 @@
 @import '_myFico';
 @import '_newegg';
 @import '_newegg-two';
-@import 'turbo-tax';
+@import '_turbo-tax';
 // @import 'foundation-emails';
 // @import 'template/template';
