--- a/src/assets/scss/_turbo-tax.scss
+++ b/src/assets/scss/_turbo-tax.scss
@@ -107,3 +107,26 @@
     }
   }
 }
+
+.long-box {
+  background: #f1f1f1;
+  .long-one img{
+    width: 183px;
+
+  }
+  .long-text {
+    background: #ffffff;
+    margin-top: 50px !important;
+    .title {
+      font-size: 15px;
+      padding-bottom: 15px;
+      margin-top: 30px;
+    }
+    .info {
+      font-size: 13px;
+      a {
+        color: #0082c3;
+      }
+    }
+  }
+}
