--- a/src/assets/scss/_turbo-tax.scss
+++ b/src/assets/scss/_turbo-tax.scss
@@ -2,7 +2,6 @@
   width: 100%;
 }
 
-
 .turbo-tax_header {
   margin-top: 10px !important;
   width: 100%;
@@ -110,9 +109,8 @@
 
 .long-box {
   background: #f1f1f1;
-  .long-one img{
+  .long-one img {
     width: 183px;
-
   }
   .long-text {
     background: #ffffff;
@@ -128,5 +126,49 @@
         color: #0082c3;
       }
     }
+  }
+}
+
+.turbo-tax_footer-top {
+  .logo {
+    width: 19px;
+  }
+  .click {
+    margin-top: 7px;
+    font-weight: 600;
+  }
+  p {
+    font-family: 'Avenir Next', Avenir, Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    text-align: center;
+  }
+  span {
+    color: #6B6C72;
+  }
+
+  .turbo-tax_black-line {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    padding-top: 30px; 
+    background: #000000;
+    width: 100%; 
+    height: 1px;
+  }
+  .turbo-tax_social {
+    width: 190px !important;
+    float: right;
+    .turbo-tax__icons {
+      .columns {
+        padding: 0 !important;
+      }
+    }
+  }
+}
+
+.turbo-tax_footer-bottom {
+  background: #F1F1F1;
+  .columns {
+    padding: 0;
   }
 }
