--- a/src/partials/turbo-tax_footer.html
+++ b/src/partials/turbo-tax_footer.html
@@ -1,6 +1,6 @@
 <container>
   <row class="turbo-tax_footer-top">
-    <columns style="width: 600px !important; padding: 0 !important">
+    <columns style="padding: 35px 0 0 0">
       <row>
         <a
           href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f-2BXtkUu1fmoENfPqZwUcWmB-2BoE2mwo7mE62V1mdz8Sjw6oDz1KZY2THdmH4PRcJN8hx3Q-2FGnocsszY6fyxgvrw0-3DxuDB_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuUcdo0ANo1GQ1TetOabCq7KDevCBJWzGwZID2gfpXsvkLkGHDS6HiYRFbBAPIP1Vy7XBBQiRlxCQ00QfsxMu7-2FY-2BCPSBDv36dHtVAZ231DJs-2FyxgsjsDxzs6D14iGQlSuK62TjTeL7aAQNPrzMaePUgxFwP1lwdjQacqts4HD8Mzw-3D-3D"
@@ -10,26 +10,19 @@
             alt=""
         /></a>
         <row>
-          <p>
-            <span style="font-size: 13px; font-weight: 600; color: #393a3d"
-              >Check before you click!</span
-            >
-          </p></row
-        >
-
-        <row>
-          <p>
-            TurboTax will never ask you for personal information in an email.
+          <p class="click">
+            Check before you click!
           </p>
         </row>
         <row>
           <p>
+            <span> TurboTax will never ask you for personal information in an email.
+            <br>
             When you click on a link, the address should always contain
-            "intuit.com/".
+            "intuit.com/".</span>
           </p>
         </row>
-        <row>
-          <p class="turbo-tax_black-line"></p>
+        <row class="turbo-tax_black-line">
         </row>
         <row class="turbo-tax_social">
           <columns
@@ -37,7 +30,7 @@
             style="padding-bottom: 8px !important"
           >
             <row>
-              <columns style="padding-bottom: 0 !important">
+              <columns style="padding-bottom: 0 !important;">
                 <a
                   href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9fwGBzta1l4sxW4Zwp5TPWuFeUikWpSj8IVqv9-2F6k5uw70wKO_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuWl2JRF1jwYerfNevcL8mHAv4hTqJqLwZQIg5R1L00WzRLsH96q9Zu9UaDTyf5PROvkIm3ekeIm-2BsBGK6xMcdhEbgXY9IzzOVS1-2FHkxcIBH3r22pbyPGeZN5115mRIa9mk1iV6pQ7OdjcCOSkF6o79350H2Udw465Y8JE8GQALmGg-3D-3D"
                   ><img
@@ -99,41 +92,46 @@
 
 <container>
   <row class="turbo-tax_footer-bottom">
-    <columns small="12" large="12">
+    <columns  style="padding: 0;">
       <row>
-        <columns small="12" large="12" class="footer-img"
+        <columns  class="footer-img"
           ><img
             src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F6127d7f3470abe5c01a27982%2Foriginal.gif%3F1630001139&t=1635974460&ymreqid=ed8b9e6a-da10-874f-1c8e-730000016500&sig=EPqt7.Z076yn46oMJni2vw--~D"
             alt=""
         /></columns>
       </row>
       <row>
-        <columns class="left" small="3" large="3">
-          <span
-            style="display: block !important; font-size: 11px; color: #58595f"
-          >
+        <columns class="left" style="width: 155px; padding-left: 19px !important;">
+          <row>
+            <span
+            style="font-size: 11px; color: #58595f;"
+            >
             <a
               style="color: #58595f; text-decoration: none"
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=pR-2FWRKOLxQRAf17YCDtXTfUfzxYslQJD3tMvmKQHKBhDpjl6P0Id5HhB5-2B-2Fvx34GhVi__L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuXdGtaL56MjSZBJuN-2B6SUBRqQPgI1igqXcEtJ5IeDzW3Zv373yMg-2B-2B2-2BPyBSuRiTLIMo0ZnX6z4iIE6bc0Ng4t1zLNB2qiHzLB7fxNfBwEw3kYRwSJhSWivdDIu-2BhFtDtbTsq0vYD2CmZKCoyyYKT0er-2BH9oEhXi6yjWUuOEYeZug-3D-3D"
-              >Legal</a
-            >
+              >Legal <br>
+            </a >
+
             <a
               style="color: #58595f; text-decoration: none; line-height: 5"
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f0wq6PwYEGgjxeppJ73I-2FyyNzWksxL7qSoHjA0b-2BZsL6gGtEqKvuHrkt9Yl65Uv1Mg-3D-3DmA8z_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuVHUAirbdB9MUIHAp39nGCYK2CoUt5-2FX-2B8T9FIf85WliSriFm9ZGSMQdE7-2FjiBH1VWomYhxdA7LByo3sGZOyAyNUf8AI8Ei6VkgRTpi8ygygHBQCgHpuppxmhuXuflAHWCxyKOBHO4lSKhFwwaMFoUlo0X-2B5uiDlxBA-2BXsN6E2-2BMQ-3D-3D"
-              >Privacy</a
-            >
+              >Privacy
+            </a>
+            <br>
             <a
               style="color: #58595f; text-decoration: none"
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f0wq6PwYEGgjxeppJ73I-2FyxsgRxoakNLpPyeWAJp0MUCMydt_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuW7AEmqGczNAMu-2BPNr0CaGQH4i-2Bgh7brSnf-2BPb3WSW4Yp2I1N-2BJ10AO8SxNdvgZsM709-2Broo4pOh1dl7SLMdPUwIRxGI82K7NeqHcoyVIJrV1984-2B00TD78nI4FcRTtHaR-2BrbAYpTowvbQFm-2FCVLlqwb-2BwJNEGS1ty9ot75m3BZ5w-3D-3D"
-              >Security</a
-            >
+              >Security
+            </a>
+          </row>
           </span>
         </columns>
-        <columns class="right" small="9" large="9">
-          <span style="font-size: 11px; color: #58595f">
+        <columns class="footer_text" small="6" large="6" >
+          <span style="font-family: 'Avenir Next', Avenir, Helvetica, Arial, sans-serif;
+          font-size: 11px; color: #58595f;">
             This email was sent to the following address: username@yahoo.com
-            <br />
-            If you feel you have received this message in error, or would like
+            <br/>
+            If you feel you have received this message in error, or would like <br>
             to unsubscribe
             <a
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f4SpjdY-2BT0-2F8399OSyigAMUuXL2RAY4fgPBegmqdizpXlSNDMn0nJpCpvOrapQuuaUre7tl1Bc5wsdaACxMdJFqEhC3rfNsSFTrYvtEgcxuU-2Fnazh6hU42zusmlI0EPDV4hYpnhWg-2BpnpXamS3Fv54vVr6ubYwETruOo3Z-2F7t3bdTYG7Kt0zFSOw0KplpKoCGJPjxFoxmiaGLcXKK018ZYcvEDxMGl-2FhWcZJfr2U4Mix0Q39R3rAU645jrI2uiGdAnuUwooLnrbVh86Zt2EGeOoVKEuqMBPMk4bqfMcllsutFlxUyKiEPbuSBtRBKL94pOL6-2BMoYmjG-2BYZMvINSwJBvpQeYGVQZx3yPMkFqGlaxORB9wFq6l3LFQG0CgS1rTzTa8gzioDlEsmcbEQCW8vTOv4B0QU48msqDmLvI6w2lcYW6H8nhWlNpTdaLlfC7l1g-3D-3D_q9c_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuWIsL-2Bpzw-2FAvxzUZRyXzNjtI3goiys0z2omCaWzE9iQ7jK9VDrqDDqT37M6lima7E1ENYa2FZpNsRNG2OK6C7aj1xXXXIYxYMRfrZAg-2BXGThRwWBLTiHS0TxNn4jIIrtN3X2uT7xZ3QAAYp-2FUZuhsfSHet-2FvrW3nIg78wfI3K30mw-3D-3D"
@@ -145,13 +143,12 @@
               style="
                 color: #0077c5;
                 text-decoration: none;
-                padding-bottom: 10px;
               "
               >manage preferences</a
             >
             <a
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f0wq6PwYEGgjxeppJ73I-2FyyNzWksxL7qSoHjA0b-2BZsL6gGtEqKvuHrkt9Yl65Uv1Mg-3D-3Df0ZM_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuUiARrismDGWjoeCecqX7nE-2FVP85WnrRJGhETWs9bRuROzdEOOgr7YpIUt3uKsZ8E8MAIOCq9BKAazY5k-2BViFx1WuC3oz8FZBrLZRNfg6f93am2V-2B-2FhuVJflBfEHhp-2F-2FxsxblDyns2-2F2YV8JhS6hg7nt7agcj3u3Dn-2BgeBWcGNu0Q-3D-3D"
-              style="color: #0077c5; text-decoration: none; line-height: 2"
+              style="color: #0077c5; text-decoration: none; line-height: 30px;"
               >Privacy Policy.</a
             >
             <a
@@ -171,6 +168,7 @@
             <span style="line-height: 3">2584-007</span>
           </span>
         </columns>
+        <columns small="3" large="3"></columns>
       </row>
     </columns>
   </row>
