fixed boxes styles

--- a/src/partials/turbo-tax_footer.html
+++ b/src/partials/turbo-tax_footer.html
@@ -1,6 +1,6 @@
 <container>
   <row class="turbo-tax_footer-top">
-    <columns style="padding: 35px 0 0 0">
+    <columns>
       <row>
         <a
           href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f-2BXtkUu1fmoENfPqZwUcWmB-2BoE2mwo7mE62V1mdz8Sjw6oDz1KZY2THdmH4PRcJN8hx3Q-2FGnocsszY6fyxgvrw0-3DxuDB_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuUcdo0ANo1GQ1TetOabCq7KDevCBJWzGwZID2gfpXsvkLkGHDS6HiYRFbBAPIP1Vy7XBBQiRlxCQ00QfsxMu7-2FY-2BCPSBDv36dHtVAZ231DJs-2FyxgsjsDxzs6D14iGQlSuK62TjTeL7aAQNPrzMaePUgxFwP1lwdjQacqts4HD8Mzw-3D-3D"
