--- a/src/assets/scss/_turbo-tax.scss
+++ b/src/assets/scss/_turbo-tax.scss
@@ -32,36 +32,46 @@
 
 .one-box-text {
   background: #f1f1f1;
-  p {
-    padding: 20px 20px 22px 10px;
-    background: #ffffff;
-    font-size: 14px;
+  .hero-text {
+    p {
+      padding: 20px 20px 22px 10px !important;
+      background: #ffffff;
+      font-size: 14px;
+    }
   }
 }
 
 .two-boxs {
   background: #f1f1f1;
   .box-one {
-    .title {
-      font-size: 15px;
-      padding-bottom: 16px;
-    }
-    .info {
-      font-size: 12.5px;
-      a {
-        color: #0082c3;
+    .text {
+      padding-top: 20px !important;
+      .title {
+        font-size: 15px;
+        padding: 0 10px 5px !important;
+      }
+      .info {
+        font-size: 12.5px;
+        padding: 5px 10px 7px !important;
+        a {
+          color: #0082c3;
+        }
       }
     }
   }
   .box-two {
-    .title {
-      font-size: 15px;
-      padding-bottom: 15px;
-    }
-    .info {
-      font-size: 13px;
-      a {
-        color: #0082c3;
+    .text {
+      padding-top: 20px !important;
+      .title {
+        font-size: 15px;
+        padding: 0 10px 5px !important;
+      }
+      .info {
+        font-size: 12.5px;
+        padding: 5px 10px 26px !important;
+        a {
+          color: #0082c3;
+        }
       }
     }
   }
@@ -70,38 +80,50 @@
 .three-boxs {
   background: #f1f1f1;
   .sm-one {
-    .title {
-      font-size: 15px;
-      padding-bottom: 16px;
-    }
-    .info {
-      font-size: 12.5px;
-      a {
-        color: #0082c3;
+    .text {
+      padding-bottom: 0;
+      .title {
+        font-size: 15px;
+        padding: 25px 10px 8px !important;
+      }
+      .info {
+        font-size: 12.5px;
+        padding: 8px 10px 16px !important;
+        a {
+          color: #0082c3;
+        }
       }
     }
   }
   .sm-two {
-    .title {
-      font-size: 15px;
-      padding-bottom: 16px;
-    }
-    .info {
-      font-size: 13px;
-      a {
-        color: #0082c3;
+    .text {
+      padding-bottom: 0;
+      .title {
+        font-size: 15px;
+        padding: 25px 10px 8px !important;
+      }
+      .info {
+        font-size: 12.5px;
+        padding: 10px 10px 50px !important;
+        a {
+          color: #0082c3;
+        }
       }
     }
   }
   .sm-three {
-    .title {
-      font-size: 15px;
-      padding-bottom: 15px;
-    }
-    .info {
-      font-size: 13px;
-      a {
-        color: #0082c3;
+    .text {
+      padding-bottom: 0;
+      .title {
+        font-size: 15px;
+        padding: 25px 10px 8px !important;
+      }
+      .info {
+        font-size: 12.5px;
+        padding: 8px 10px 33px !important;
+        a {
+          color: #0082c3;
+        }
       }
     }
   }
@@ -130,6 +152,10 @@
 }
 
 .turbo-tax_footer-top {
+  & > tbody > tr > th {
+    padding-top: 35px;
+    padding-bottom: 0;
+  }
   .logo {
     width: 19px;
   }
@@ -138,21 +164,21 @@
     font-weight: 600;
   }
   p {
-    font-family: 'Avenir Next', Avenir, Helvetica, Arial, sans-serif;
+    font-family: "Avenir Next", Avenir, Helvetica, Arial, sans-serif;
     font-size: 13px;
     line-height: 18px;
     text-align: center;
   }
   span {
-    color: #6B6C72;
+    color: #6b6c72;
   }
 
   .turbo-tax_black-line {
     margin-top: 30px;
     margin-bottom: 10px;
-    padding-top: 30px; 
+    padding-top: 30px;
     background: #000000;
-    width: 100%; 
+    width: 100%;
     height: 1px;
   }
   .turbo-tax_social {
@@ -167,7 +193,7 @@
 }
 
 .turbo-tax_footer-bottom {
-  background: #F1F1F1;
+  background: #f1f1f1;
   .columns {
     padding: 0;
   }
