--- a/src/assets/scss/_myFico.scss
+++ b/src/assets/scss/_myFico.scss
@@ -20,7 +20,7 @@ body,
     }
     .sign-in_button {
       font-family: arial, helvetica, sans-serif !important;
-      padding: 10px 15px !important;
+      padding: 10px 20px !important;
       border-radius: 3px;
       border: 1px solid #00609c;
       color: #196ad4;
@@ -31,112 +31,77 @@ body,
 }
 
 .myFico_line {
-  width: 100%;
-  .columns {
-    padding: 0 0 3px 0 !important;
-  }
-  span {
-    height: 1px !important;
-  }
   .blue-line {
-    font-size: 1px;
+    width: 100%;
     background: #00609c;
-    background-color: #00609c;
-    padding: 0px 600px 4px 0px !important;
   }
 }
 
 .myFico_main-info {
   font-family: Arial, Helvetica, sans-serif;
-  padding-bottom: 30px;
-  .columns {
-    padding: 0 20px !important;
+  .hero {
+    padding: 20px 20px 10px !important;
+    img {
+      width: 100%;
+    }
+    .title {
+      padding: 30px 0 10px !important;
+      color: #000000;
+      font-size: 18px;
+      font-weight: 600;
+    }
+    .info {
+      color: #000000;
+      font-size: 14px;
+    }
   }
-  img {
-    width: 560px;
-  }
-  span {
-    text-align: left;
-  }
-  span .info {
-    width: 600px !important;
-  }
-  .header {
-    color: #000000;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  .info {
-    color: #000000;
-    font-size: 14px;
-  }
-  p {
-    width: 240px;
+}
+
+.myFico_main-button {
+  & > tbody > tr > th {
+    padding: 20px !important;
   }
   .button {
     background: #00609c;
-    background-color: #00609c;
-    padding: 10px 0;
+    padding: 10px 70px !important;
     border: 1px solid #00609c;
     color: #ffffff;
     border-radius: 3px;
     font-size: 16px;
     text-decoration: none;
     text-align: center;
-    vertical-align: middle;
   }
 }
 
 .myFico_sub-info {
   & > tbody > tr > th {
-    padding: 0 20px !important;
+    padding: 20px 20px 10px !important;
   }
-
-  .left {
-    padding-right: 10px;
-    padding-bottom: 0;
-    height: 290px;
-    img {
-      width: 290px !important;
-    }
-    p {
-      width: 203px;
-    }
-    .button {
-      background: #00609c;
-      background-color: #00609c;
-      border: 1px solid #00609c;
-      color: #ffffff;
-      border-radius: 3px;
-      padding: 9px 0 8px 0 !important;
-      font-size: 16px;
-      text-decoration: none;
-      text-align: center;
-      vertical-align: middle;
-    }
-  }
-
+  .left,
   .right {
-    padding-left: 10px;
-    padding-bottom: 0;
-    height: 296px;
     img {
-      width: 290px !important;
+      max-width: 100%;
     }
     p {
-      width: 203px;
+      color: #000000;
+      font-size: 18px;
+      font-weight: 600;
+      padding: 20px 0 10px !important;
     }
+  }
+
+  .left-button,
+  .right-button {
+    padding: 10px 0 20px!important;
     .button {
       background: #00609c;
-      background-color: #00609c;
+      padding: 10px 53px !important;
       border: 1px solid #00609c;
       color: #ffffff;
       border-radius: 3px;
-      padding: 9px 0 8px 0 !important;
       font-size: 16px;
       text-decoration: none;
       text-align: center;
-      vertical-align: middle;
     }
   }
 }
@@ -182,17 +147,17 @@ body,
 .myFico_footer-bottom {
   background: #e6e6e6;
   background-color: #e6e6e6;
-  & >tbody > tr > th {
+  & > tbody > tr > th {
     padding: 20px !important;
   }
-  p{
+  p {
     color: #000000;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 20px;
     text-align: left;
     font-size: 12px;
   }
-  a{
+  a {
     color: #196ad4;
     text-decoration: underline;
     font-size: 12px;
