--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,7 +1,7 @@
 @import 'settings';
 @import 'foundation-emails';
 
-@import '_myFico';
+@import 'myFico';
 @import '_newegg';
 @import '_newegg-two';
 @import '_turbo-tax';
