--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,7 +2,7 @@
 @import 'foundation-emails';
 
 @import 'myFico';
-@import '_newegg';
-@import '_newegg-two';
-@import '_turbo-tax';
+@import 'newegg';
+@import 'newegg-two';
+@import 'turbo-tax';
 //  @import 'template/template';
