--- a/src/partials/myFico_footer.html
+++ b/src/partials/myFico_footer.html
@@ -1,7 +1,6 @@
 <container>
   <row class="myFico_footer-top">
-    <columns small="12" large="12">
-      <spacer size="20"></spacer>
+    <columns>
       <row>
         <columns>
           <a
@@ -44,29 +43,27 @@
           /></a>
         </columns>
       </row>
-      <spacer size="20"></spacer>
     </columns>
   </row>
+</container>
+
+<container>
   <row class="myFico_footer-bottom">
-    <columns>
+    <columns small="12" large="12">
       <row>
-        <columns small="12" large="12">
-          <p>
-            This email was sent to quandremyers@yahoo.com. This message is
-            brought to you by myFICO and FICO. You are receiving this message
-            because you have subscribed to receive credit education, news, and
-            occasional offers.
-          </p>
-          <spacer size="20"></spacer>
-          <p>
-            Please add
-            <a href="news@mail.myfico.com">news@mail.myfico.com</a> to your
-            address book to ensure our emails reach your inbox.
-          </p>
-        </columns>
-      </row>
-      <row>
-        <columns small="12" large="12">
+        <p>
+          This email was sent to quandremyers@yahoo.com. This message is brought
+          to you by myFICO and FICO. You are receiving this message because you
+          have subscribed to receive credit education, news, and occasional
+          offers.
+        </p>
+
+        <p style="padding-top: 10px">
+          Please add
+          <a href="news@mail.myfico.com">news@mail.myfico.com</a> to your
+          address book to ensure our emails reach your inbox.
+        </p>
+        <p>
           <a
             href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fsupport.myfico.com%2Fhc%2Fen-us%2Frequests%2Fnew%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=credit-education%26utm_content=support/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/GAT2NKyuuR57btO1mWiBE2uBS3E=239"
             >Support</a
@@ -85,28 +82,25 @@
             href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Fmarketing%2Fpreferences.html%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=credit-education%26utm_content=unsubscribe/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/CkhKTOcgJLl-t6C-5TG4xzbaw0k=239"
             >Unsubscribe</a
           >
-        </columns>
-      </row>
-      <row>
-        <columns small="12" large="12">
-          <p>
-            &copy; 2021 Fair Isaac Corporation 181 Metro Drive, Suite 700 San
-            Jose CA 95110. All rights reserved. FICO, myFICO, Score Watch, The
-            score lenders use, and The Score That Matters are trademarks or
-            registered trademarks of Fair Isaac Corporation. Equifax Credit
-            Report is a trademark of Equifax, Inc. and its affiliated companies.
-            Many factors affect your FICO Scores and the interest rates you may
-            receive. Fair Isaac is not a credit repair organization as defined
-            under federal or state law, including the Credit Repair
-            Organizations Act. Fair Isaac does not provide "credit repair"
-            services or advice or assistance regarding "rebuilding" or
-            "improving" your credit record, credit history or credit rating.
-            <a
-              href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.consumer.ftc.gov%2Ftopics%2Fcredit-and-loans/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/SxGh8BC03bVDxXi8klSzhDPD164=239"
-              >FTC's website on credit.</a
-            >
-          </p>
-        </columns>
+        </p>
+
+        <p>
+          &copy; 2021 Fair Isaac Corporation 181 Metro Drive, Suite 700 San Jose
+          CA 95110. All rights reserved. FICO, myFICO, Score Watch, The score
+          lenders use, and The Score That Matters are trademarks or registered
+          trademarks of Fair Isaac Corporation. Equifax Credit Report is a
+          trademark of Equifax, Inc. and its affiliated companies. Many factors
+          affect your FICO Scores and the interest rates you may receive. Fair
+          Isaac is not a credit repair organization as defined under federal or
+          state law, including the Credit Repair Organizations Act. Fair Isaac
+          does not provide "credit repair" services or advice or assistance
+          regarding "rebuilding" or "improving" your credit record, credit
+          history or credit rating.
+          <a
+            href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.consumer.ftc.gov%2Ftopics%2Fcredit-and-loans/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/SxGh8BC03bVDxXi8klSzhDPD164=239"
+            >FTC's website on credit.</a
+          >
+        </p>
       </row>
     </columns>
   </row>
