fixed boxes styles

--- a/src/assets/scss/_newegg-two.scss
+++ b/src/assets/scss/_newegg-two.scss
@@ -41,7 +41,7 @@ body,
       .columns {
         img {
           width: 218px !important;
-          height: 227px !important;
+          max-height:: 227px !important;
         }
       }
     }
@@ -89,11 +89,11 @@ body,
       }
       .left {
         width: 396px !important;
-        height: 90px;
+        max-height:: 90px;
       }
       .right {
         width: 168px;
-        height: 33px;
+        max-height:: 33px;
         padding: 30px 0 0;
       }
     }
