--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,8 +1,8 @@
 @import 'settings';
 @import 'foundation-emails';
 
-@import 'myFico';
-@import 'newegg';
-@import 'newegg-two';
-@import 'turbo-tax';
+@import '_myFico';
+@import '_newegg';
+@import '_newegg-two';
+@import '_turbo-tax';
 //  @import 'template/template';
