--- a/src/partials/myFico_footer.html
+++ b/src/partials/myFico_footer.html
@@ -1,6 +1,6 @@
 <container>
   <row class="myFico_footer-top">
-    <columns>
+    <columns small="12" large="12">
       <row>
         <columns>
           <a
@@ -45,9 +45,7 @@
       </row>
     </columns>
   </row>
-</container>
-
-<container>
+  
   <row class="myFico_footer-bottom">
     <columns small="12" large="12">
       <row>
